<resources>
    <string name="app_name">Student Connect</string>
    <string name="home">Home</string>
    <string name="add_class">Add Class</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="location">Location</string>
    <string name="log_out">Log Out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
